# KIPP

./: .gitignore  Cargo.toml  README.md  dotenv.sample  help.txt  print.txt  spec.txt  update.sh  このプロジェクトについて.txt
docker/: docker-compose.yml  docker-up.sh
src/: auth.rs  commands.rs  db.rs  disp.rs  getter.rs  imp.rs  main.rs  support.rs
