[package]
name = "Imadesho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-types = {version="~0.2.0", features=["derive", "with-serde_json-1"]}
tokio-postgres = "0.7.10"
tokio = { version = "1", features = ["full"] }
serde_json = "^1.0"
serde = {version="~1", features=["derive"]}
uuid = { version = "^0.8", features = ["serde", "v4"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
poise = "0.5.6"