[package]
name = "Imadesho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-types = {version="~0.2.0", features=["derive", "with-serde_json-1", "with-uuid-1"]}
tokio-postgres = "0.7.10"
tokio = { version = "1", features = ["full"] }
serde_json = "^1.0"
serde = {version="~1", features=["derive"]}

dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
poise = "0.6.1"
serenity = "0.12.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]