[package]
name = "KIPP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-types = {version="~0.2.0", features=["derive", "with-serde_json-1", "with-uuid-1","with-chrono-0_4"]}
tokio-postgres = "0.7.10"
tokio = { version = "1.36.0", features = ["full","time"] }
serde_json = "^1.0"
serde = {version="~1", features=["derive"]}
chrono = "0.4.33"
dotenv = "0.15.0"
env_logger = "0.11.0"
log = "0.4.14"

poise = {version = "0.6.1", features = ["collector"]}

# serenity = { version = "0.12.0", default-features = false, features = ["cache", "client", "collector", "gateway", "rustls_backend", "model"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]